# gingerbread

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  REUSE.toml
.github/workflows/: repository.yaml  rust.yaml
LICENSES/: .editorconfig
crates/gingerbread/: Cargo.toml
crates/gingerbread/src/: main.rs
docs/logo/: .editorconfig  gingerbread.aseprite
