# SPDX-FileCopyrightText: 2024 Jonas Fierlings <fnoegip@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "gingerbread"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = """
The gingerbread CLI runs the Advent of Code solutions
"""
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
